Add documentation and savepoint + new release

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
-a.btn-primary, a.btn-primary:link, a.btn-primary:visited {
+a.btn-primary,
+a.btn-primary:link,
+a.btn-primary:visited {
     color: white;
 }
